--- a/playground/playground_llama3.2_11b.ipynb
+++ b/playground/playground_llama3.2_11b.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/w4756677/miniconda3/envs/llama3/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys \n",
     "sys.path.append('/home/w4756677/garment/AIpparel-Code/src')\n",
     "from transformers import AutoProcessor, LlavaConfig\n",
-    "from models.aipparel_llava import AIpparelLlavaForConditionalGeneration\n",
     "import os \n",
     "from data.datasets.gcd_dataset import GarmentCodeData\n",
     "from data.datasets.panel_configs import StandardizeConfig, StatsConfig\n",
@@ -26,9 +34,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PanelClasses::INFO::Loading panel classes from file:  assets/data_configs/panel_classes_garmentcodedata.json\n",
+      "PanelClasses::INFO::Loading panel classes from file:  /home/w4756677/garment/AIpparel-Code/assets/panel_classes_garmentcodedata.json\n",
       "The panel classes in this dataset are : ['left_btorso', 'left_ftorso', 'right_ftorso', 'right_btorso', 'skirt_front', 'skirt_back', 'wb_back', 'wb_front', 'left_sleeve_b', 'left_sleeve_f', 'right_sleeve_f', 'right_sleeve_b', 'sl_left_cuff_skirt_f', 'sl_left_cuff_skirt_b', 'sl_right_cuff_skirt_b', 'sl_right_cuff_skirt_f', 'sl_left_cuff_b', 'sl_left_cuff_f', 'sl_right_cuff_f', 'sl_right_cuff_b', 'pant_f_l', 'pant_b_l', 'pant_f_r', 'pant_b_r', 'left_collar_front', 'left_collar_back', 'right_collar_front', 'right_collar_back', 'ins_skirt_front_0', 'ins_skirt_back_0', 'ins_skirt_back_1', 'ins_skirt_front_1', 'skirt_panel_2', 'skirt_panel_0', 'skirt_panel_1', 'skirt_panel_3', 'skirt_panel_4', 'skirt_panel_5', 'ins_skirt_back_2', 'ins_skirt_front_2', 'skirt_panel_6', 'skirt_front_0', 'skirt_back_0', 'left_hood', 'right_hood', 'skirt_panel_7', 'skirt_panel_8', 'pant_l_cuff_skirt_f', 'pant_l_cuff_skirt_b', 'pant_r_cuff_skirt_b', 'pant_r_cuff_skirt_f', 'ins_skirt_front_3', 'ins_skirt_back_3', 'pant_l_cuff_f', 'pant_l_cuff_b', 'pant_r_cuff_f', 'pant_r_cuff_b', 'skirt_back_1', 'skirt_front_1', 'skirt_panel_9', 'skirt_panel_10', 'ins_skirt_back_4', 'ins_skirt_front_4', 'skirt_front_2', 'skirt_back_2', 'skirt_panel_11', 'skirt_panel_12', 'skirt_back_3', 'skirt_front_3', 'skirt_panel_13', 'ins_skirt_front_5', 'ins_skirt_back_5', 'skirt_back_4', 'skirt_front_4', 'skirt_panel_14']\n",
-      "PanelClasses::INFO::Loading panel classes from file:  assets/data_configs/panel_classes_garmentcodedata.json\n",
+      "PanelClasses::INFO::Loading panel classes from file:  /home/w4756677/garment/AIpparel-Code/assets/panel_classes_garmentcodedata.json\n",
       "The panel classes in this dataset are : ['left_btorso', 'left_ftorso', 'right_ftorso', 'right_btorso', 'skirt_front', 'skirt_back', 'wb_back', 'wb_front', 'left_sleeve_b', 'left_sleeve_f', 'right_sleeve_f', 'right_sleeve_b', 'sl_left_cuff_skirt_f', 'sl_left_cuff_skirt_b', 'sl_right_cuff_skirt_b', 'sl_right_cuff_skirt_f', 'sl_left_cuff_b', 'sl_left_cuff_f', 'sl_right_cuff_f', 'sl_right_cuff_b', 'pant_f_l', 'pant_b_l', 'pant_f_r', 'pant_b_r', 'left_collar_front', 'left_collar_back', 'right_collar_front', 'right_collar_back', 'ins_skirt_front_0', 'ins_skirt_back_0', 'ins_skirt_back_1', 'ins_skirt_front_1', 'skirt_panel_2', 'skirt_panel_0', 'skirt_panel_1', 'skirt_panel_3', 'skirt_panel_4', 'skirt_panel_5', 'ins_skirt_back_2', 'ins_skirt_front_2', 'skirt_panel_6', 'skirt_front_0', 'skirt_back_0', 'left_hood', 'right_hood', 'skirt_panel_7', 'skirt_panel_8', 'pant_l_cuff_skirt_f', 'pant_l_cuff_skirt_b', 'pant_r_cuff_skirt_b', 'pant_r_cuff_skirt_f', 'ins_skirt_front_3', 'ins_skirt_back_3', 'pant_l_cuff_f', 'pant_l_cuff_b', 'pant_r_cuff_f', 'pant_r_cuff_b', 'skirt_back_1', 'skirt_front_1', 'skirt_panel_9', 'skirt_panel_10', 'ins_skirt_back_4', 'ins_skirt_front_4', 'skirt_front_2', 'skirt_back_2', 'skirt_panel_11', 'skirt_panel_12', 'skirt_back_3', 'skirt_front_3', 'skirt_panel_13', 'ins_skirt_front_5', 'ins_skirt_back_5', 'skirt_back_4', 'skirt_front_4', 'skirt_panel_14']\n"
      ]
     }
@@ -40,10 +48,10 @@
     "    caption_dir=\"/mnt/gs/sci-garment/long-caption-processed\",\n",
     "    editing_flip_prob=0.5,\n",
     "    sampling_rate=[1,0,0,0,0],\n",
-    "    split_file=\"/home/w4756677/garment/AIpparel-Code/assets/data_configs/garmentcodedata_datasplit.json\",\n",
-    "    datalist_file=\"assets/data_configs/garmentcodedata_list.txt\",\n",
+    "    split_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_datasplit.json\",\n",
+    "    datalist_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_list.txt\",\n",
     "    body_type=\"default_body\",\n",
-    "    panel_classification=\"assets/data_configs/panel_classes_garmentcodedata.json\",\n",
+    "    panel_classification=\"/home/w4756677/garment/AIpparel-Code/assets/panel_classes_garmentcodedata.json\",\n",
     "    split=\"train\"\n",
     ")\n",
     "val_dataset = GarmentCodeData(\n",
@@ -52,10 +60,10 @@
     "    caption_dir=\"/mnt/gs/sci-garment/long-caption-processed\",\n",
     "    editing_flip_prob=0.5,\n",
     "    sampling_rate=[1,0,0,0,0],\n",
-    "    split_file=\"/home/w4756677/garment/AIpparel-Code/assets/data_configs/garmentcodedata_datasplit.json\",\n",
-    "    datalist_file=\"assets/data_configs/garmentcodedata_list.txt\",\n",
+    "    split_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_datasplit.json\",\n",
+    "    datalist_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_list.txt\",\n",
     "    body_type=\"default_body\",\n",
-    "    panel_classification=\"assets/data_configs/panel_classes_garmentcodedata.json\",\n",
+    "    panel_classification=\"/home/w4756677/garment/AIpparel-Code/assets/panel_classes_garmentcodedata.json\",\n",
     "    split=\"val\"\n",
     ")\n",
     "\n",
@@ -75,51 +83,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'garment_tokenizer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LlavaNextProcessor\n\u001b[1;32m      4\u001b[0m processor \u001b[38;5;241m=\u001b[39m LlavaNextProcessor\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mllava-hf/llava-v1.6-mistral-7b-hf\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m collate_fn \u001b[38;5;241m=\u001b[39m partial(llava_next_collate_fn, \n\u001b[1;32m      6\u001b[0m                      processor\u001b[38;5;241m=\u001b[39mprocessor,\n\u001b[0;32m----> 7\u001b[0m                      garment_tokenizer\u001b[38;5;241m=\u001b[39m\u001b[43mgarment_tokenizer\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'garment_tokenizer' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoProcessor\n",
-    "processor = AutoProcessor.from_pretrained(\"meta-llama/Llama-3.2-11B-Vision-Instruct\")\n"
+    "processor = AutoProcessor.from_pretrained(\"meta-llama/Llama-3.2-11B-Vision-Instruct\")\n",
+    "processor.tokenizer.add_tokens(\"<pad>\", special_tokens=True)\n",
+    "processor.tokenizer.pad_token = \"<pad>\"\n",
+    "all_new_tokens = garment_tokenizer.get_all_token_names()\n",
+    "num_added_tokens = processor.tokenizer.add_tokens(all_new_tokens, special_tokens=True)\n",
+    "token_name2_idx_dict = {}\n",
+    "for token in all_new_tokens:\n",
+    "    token_idx = processor.tokenizer(token, add_special_tokens=False).input_ids[0]\n",
+    "    token_name2_idx_dict[token] = token_idx\n",
+    "    \n",
+    "garment_tokenizer.set_token_indices(token_name2_idx_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefinedError",
-     "evalue": "'str object' has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUndefinedError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data_dict \u001b[38;5;241m=\u001b[39m \u001b[43mcollate_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtrain_dataset\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/garment/AIpparel-Code/src/data/collate_fns.py:36\u001b[0m, in \u001b[0;36mllava_next_collate_fn\u001b[0;34m(batch, processor, garment_tokenizer)\u001b[0m\n\u001b[1;32m     34\u001b[0m image_path_list\u001b[38;5;241m.\u001b[39mappend(image_path)\n\u001b[1;32m     35\u001b[0m images_list\u001b[38;5;241m.\u001b[39mappend(image)\n\u001b[0;32m---> 36\u001b[0m dialog \u001b[38;5;241m=\u001b[39m \u001b[43mprocessor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_chat_template\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdialog\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokenize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m question \u001b[38;5;241m=\u001b[39m processor\u001b[38;5;241m.\u001b[39mapply_chat_template(question, tokenize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     38\u001b[0m n_question_pattern \u001b[38;5;241m=\u001b[39m dialog\u001b[38;5;241m.\u001b[39mcount(DEFAULT_PLACEHOLDER_TOKEN)\n",
-      "File \u001b[0;32m~/miniconda3/envs/garment/lib/python3.10/site-packages/transformers/processing_utils.py:1131\u001b[0m, in \u001b[0;36mProcessorMixin.apply_chat_template\u001b[0;34m(self, conversation, chat_template, tokenize, **kwargs)\u001b[0m\n\u001b[1;32m   1125\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1126\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1127\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo chat template is set for this processor. Please either set the `chat_template` attribute, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1128\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mor provide a chat template as an argument. See \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1129\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://huggingface.co/docs/transformers/main/en/chat_templating for more information.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1130\u001b[0m         )\n\u001b[0;32m-> 1131\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtokenizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_chat_template\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1132\u001b[0m \u001b[43m    \u001b[49m\u001b[43mconversation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchat_template\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchat_template\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokenize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtokenize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m   1133\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/garment/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1683\u001b[0m, in \u001b[0;36mPreTrainedTokenizerBase.apply_chat_template\u001b[0;34m(self, conversation, tools, documents, chat_template, add_generation_prompt, continue_final_message, tokenize, padding, truncation, max_length, return_tensors, return_dict, return_assistant_tokens_mask, tokenizer_kwargs, **kwargs)\u001b[0m\n\u001b[1;32m   1681\u001b[0m     all_generation_indices\u001b[38;5;241m.\u001b[39mappend(generation_indices)\n\u001b[1;32m   1682\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1683\u001b[0m     rendered_chat \u001b[38;5;241m=\u001b[39m \u001b[43mcompiled_template\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1684\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmessages\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchat\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1685\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtools\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtool_schemas\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1686\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdocuments\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdocuments\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1687\u001b[0m \u001b[43m        \u001b[49m\u001b[43madd_generation_prompt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43madd_generation_prompt\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1688\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtemplate_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1689\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1690\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m continue_final_message:\n\u001b[1;32m   1691\u001b[0m     final_message \u001b[38;5;241m=\u001b[39m chat[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/miniconda3/envs/garment/lib/python3.10/site-packages/jinja2/environment.py:1304\u001b[0m, in \u001b[0;36mTemplate.render\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1302\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menvironment\u001b[38;5;241m.\u001b[39mconcat(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_render_func(ctx))  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[1;32m   1303\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m-> 1304\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menvironment\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhandle_exception\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/garment/lib/python3.10/site-packages/jinja2/environment.py:939\u001b[0m, in \u001b[0;36mEnvironment.handle_exception\u001b[0;34m(self, source)\u001b[0m\n\u001b[1;32m    934\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Exception handling helper.  This is used internally to either raise\u001b[39;00m\n\u001b[1;32m    935\u001b[0m \u001b[38;5;124;03mrewritten exceptions or return a rendered traceback for the template.\u001b[39;00m\n\u001b[1;32m    936\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    937\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdebug\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m rewrite_traceback_stack\n\u001b[0;32m--> 939\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m rewrite_traceback_stack(source\u001b[38;5;241m=\u001b[39msource)\n",
-      "File \u001b[0;32m<template>:6\u001b[0m, in \u001b[0;36mtop-level template code\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mUndefinedError\u001b[0m: 'str object' has no attribute 'text'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
+      "\n",
+      "<|image|>Can you predict the sewing pattern of the person in this image?<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+      "\n",
+      "Sure, <placeholder>.<|eot_id|>\n"
      ]
     }
    ],
    "source": [
-    "data_dict = collate_fn([train_dataset[0]])"
+    "from data.collate_fns import collate_fn\n",
+    "data = train_dataset[0]\n",
+    "dialog = data[2]\n",
+    "chat = processor.apply_chat_template(dialog, tokenize=False)\n",
+    "data_dict = collate_fn(\n",
+    "    [train_dataset[0]], \n",
+    "    processor=processor, \n",
+    "    garment_tokenizer=garment_tokenizer,\n",
+    "    model_version=\"meta-llama/Llama-3.2-11B-Vision-Instruct\")"
    ]
   },
   {
@@ -570,7 +578,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "garment",
+   "display_name": "llama3",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
