--- a/playground/playground_llama3.2_11b.ipynb
+++ b/playground/playground_llama3.2_11b.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
     "    editing_dir=\"/mnt/gs/sci-garment/garmentcodedata_editing\",\n",
     "    caption_dir=\"/mnt/gs/sci-garment/long-caption-processed\",\n",
     "    editing_flip_prob=0.5,\n",
-    "    sampling_rate=[1,0,0,0,0],\n",
+    "    sampling_rate=[0.5, 0.5,0,0,0],\n",
     "    split_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_datasplit.json\",\n",
     "    datalist_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_list.txt\",\n",
     "    body_type=\"default_body\",\n",
@@ -59,7 +59,7 @@
     "    editing_dir=\"/mnt/gs/sci-garment/garmentcodedata_editing\",\n",
     "    caption_dir=\"/mnt/gs/sci-garment/long-caption-processed\",\n",
     "    editing_flip_prob=0.5,\n",
-    "    sampling_rate=[1,0,0,0,0],\n",
+    "    sampling_rate=[0.5, 0.5,0,0,0],\n",
     "    split_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_datasplit.json\",\n",
     "    datalist_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_list.txt\",\n",
     "    body_type=\"default_body\",\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,28 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
-      "\n",
-      "<|image|>Can you predict the sewing pattern of the person in this image?<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-      "\n",
-      "Sure, <placeholder>.<|eot_id|>\n"
+      "128380\n"
      ]
     }
    ],
    "source": [
     "from data.collate_fns import collate_fn\n",
+    "print(len(processor.tokenizer))\n",
     "data = train_dataset[0]\n",
     "dialog = data[2]\n",
     "chat = processor.apply_chat_template(dialog, tokenize=False)\n",
     "data_dict = collate_fn(\n",
-    "    [train_dataset[0]], \n",
+    "    [train_dataset[0], train_dataset[1], train_dataset[2], train_dataset[3]], \n",
     "    processor=processor, \n",
     "    garment_tokenizer=garment_tokenizer,\n",
     "    model_version=\"meta-llama/Llama-3.2-11B-Vision-Instruct\")"
@@ -132,14 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 525]) torch.Size([4, 525])\n",
+      "tensor(128379) tensor(-100)\n",
+      "<|finetune_right_pad_id|>\n"
+     ]
+    }
+   ],
    "source": [
-    "import cv2\n",
-    "image_path = \"/home/w4756677/image-1d100e9.jpg\"\n",
-    "image = cv2.imread(image_path)\n",
-    "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)"
+    "print(data_dict[\"input_ids\"].shape, data_dict[\"labels\"].shape)\n",
+    "\n",
+    "print(data_dict[\"labels\"].max(), data_dict[\"labels\"].min())\n",
+    "print(processor.decode([128004]))"
    ]
   },
   {
