--- a/playground/playground_llama3.2_11b.ipynb
+++ b/playground/playground_llama3.2_11b.ipynb
@@ -83,14 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoProcessor\n",
     "processor = AutoProcessor.from_pretrained(\"meta-llama/Llama-3.2-11B-Vision-Instruct\")\n",
-    "processor.tokenizer.add_tokens(\"<pad>\", special_tokens=True)\n",
-    "processor.tokenizer.pad_token = \"<pad>\"\n",
+    "# processor.tokenizer.add_tokens(\"<pad>\", special_tokens=True)\n",
+    "# processor.tokenizer.pad_token = \"<pad>\"\n",
+    "processor.tokenizer.pad_token = \"<|finetune_right_pad_id|>\"\n",
     "all_new_tokens = garment_tokenizer.get_all_token_names()\n",
     "num_added_tokens = processor.tokenizer.add_tokens(all_new_tokens, special_tokens=True)\n",
     "token_name2_idx_dict = {}\n",
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +138,7 @@
      "output_type": "stream",
      "text": [
       "torch.Size([4, 525]) torch.Size([4, 525])\n",
-      "tensor(128379) tensor(-100)\n",
+      "tensor(128379) tensor(11)\n",
       "<|finetune_right_pad_id|>\n"
      ]
     }
@@ -145,7 +146,7 @@
    "source": [
     "print(data_dict[\"input_ids\"].shape, data_dict[\"labels\"].shape)\n",
     "\n",
-    "print(data_dict[\"labels\"].max(), data_dict[\"labels\"].min())\n",
+    "print(data_dict[\"labels\"].max(), data_dict[\"labels\"][data_dict[\"labels\"] != -100].min())\n",
     "print(processor.decode([128004]))"
    ]
   },
