--- a/playground/playground_llama3.2_11b.ipynb
+++ b/playground/playground_llama3.2_11b.ipynb
@@ -19,6 +19,7 @@
     "sys.path.append('/home/w4756677/garment/AIpparel-Code/src')\n",
     "from transformers import AutoProcessor, LlavaConfig\n",
     "import os \n",
+    "\n",
     "from data.datasets.gcd_dataset import GarmentCodeData\n",
     "from data.datasets.panel_configs import StandardizeConfig, StatsConfig\n",
     "from data.garment_tokenizers.garment_tokenizer_for_regression import GarmentTokenizerForRegression\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +48,7 @@
     "    editing_dir=\"/mnt/gs/sci-garment/garmentcodedata_editing\",\n",
     "    caption_dir=\"/mnt/gs/sci-garment/long-caption-processed\",\n",
     "    editing_flip_prob=0.5,\n",
-    "    sampling_rate=[0.5, 0.5,0,0,0],\n",
+    "    sampling_rate=[0, 0, 0, 0, 1],\n",
     "    split_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_datasplit.json\",\n",
     "    datalist_file=\"/home/w4756677/garment/AIpparel-Code/assets/garmentcodedata_list.txt\",\n",
     "    body_type=\"default_body\",\n",
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "128380\n"
+      "128379\n"
      ]
     }
    ],
@@ -130,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4, 525]) torch.Size([4, 525])\n",
-      "tensor(128379) tensor(11)\n",
-      "<|finetune_right_pad_id|>\n"
+      "torch.Size([4, 522]) torch.Size([4, 522])\n",
+      "tensor(128378) tensor(11)\n",
+      "torch.Size([38, 7])\n"
      ]
     }
    ],
@@ -147,7 +148,7 @@
     "print(data_dict[\"input_ids\"].shape, data_dict[\"labels\"].shape)\n",
     "\n",
     "print(data_dict[\"labels\"].max(), data_dict[\"labels\"][data_dict[\"labels\"] != -100].min())\n",
-    "print(processor.decode([128004]))"
+    "print(data_dict[\"pattern_params\"][128257][data_dict[\"pattern_params_mask\"][128257]].shape)"
    ]
   },
   {
