--- a/playground/playground_llama3.2_11b.ipynb
+++ b/playground/playground_llama3.2_11b.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,24 +131,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4, 522]) torch.Size([4, 522])\n",
-      "tensor(128378) tensor(11)\n",
-      "torch.Size([38, 7])\n"
+      "torch.Size([1, 279]) torch.Size([1, 279])\n"
      ]
     }
    ],
    "source": [
     "print(data_dict[\"input_ids\"].shape, data_dict[\"labels\"].shape)\n",
-    "\n",
-    "print(data_dict[\"labels\"].max(), data_dict[\"labels\"][data_dict[\"labels\"] != -100].min())\n",
-    "print(data_dict[\"pattern_params\"][128257][data_dict[\"pattern_params_mask\"][128257]].shape)"
+    "from tqdm import tqdm\n",
+    "for i in tqdm(range(len(train_dataset))):\n",
+    "    data_dict = collate_fn(\n",
+    "    [train_dataset[i]], \n",
+    "    processor=processor, \n",
+    "    garment_tokenizer=garment_tokenizer,\n",
+    "    model_version=\"meta-llama/Llama-3.2-11B-Vision-Instruct\")\n",
+    "    if 128265 in data_dict[\"pattern_params\"].keys():\n",
+    "        if data_dict[\"pattern_params\"][128265].shape[-1] != 2:\n",
+    "            print(i, data_dict[\"pattern_params\"][128265].shape)\n",
+    "# print(processor.tokenizer.decode([128256, 128265]))\n",
+    "# print(data_dict[\"labels\"].max(), data_dict[\"labels\"][data_dict[\"labels\"] != -100].min())\n",
+    "# for k in data_dict[\"pattern_params\"].keys():\n",
+    "#     print(k)\n",
+    "#     print(data_dict[\"pattern_params\"][k][data_dict[\"pattern_params_mask\"][k]].shape)"
    ]
   },
   {
